--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -6,12 +6,31 @@ padding: 25px;
 -moz-box-shadow: 0 0 5px rgba(202, 203, 204, .5);
 }
 
+// 小代码块样式
+code {
+  color: #CE8349;  //小代码块的字体颜色
+  background: #21252b;  //背景颜色
+  opacity: 0.8;  //透明度
+  margin: 2px;  //边距
+}
+//大代码块的自定义样式
+.highlight, pre {
+  margin: 30px 0 0 0;
+  padding: 0px 0px 0px 0px; //上 右 下 左
+  border-radius: 0px;
+}
+.highlight, code, pre {
+    border: -5px solid #d6d6d6;
+}
+
+// 代码框样式
 .highlight-wrap[data-rel] {
   position: relative;
   overflow: hidden;
   border-radius: 5px;
-  box-shadow: 0 10px 30px 0px rgba(0, 0, 0, 0.4);
-  margin: 35px 0;
+  box-shadow: 0 0px 30px 0px rgba(0, 0, 0, 0.3);
+  margin: 0px 0;
+  //代码块滚动条
   ::-webkit-scrollbar {
     height: 10px;
   }
@@ -19,32 +38,33 @@ padding: 25px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
   }
-
   ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 1);
   }
   &::before {
     color: white;
     content: attr(data-rel);
-    height: 38px;
-    line-height: 38px;
+    height: 30px;
+    line-height: 30px;
     background: #21252b;
     color: #fff;
     font-size: 16px;
     position: absolute;
+    // position: relative;
     top: 0;
     left: 0;
     width: 100%;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: bold;
     padding: 0px 80px;
-    text-indent: 15px;
+    text-indent: 15px; //文本类型（如PLAIN）左端距离
     float: left;
   }
   &::after {
     content: ' ';
     position: absolute;
+    // position: relative;
     -webkit-border-radius: 50%;
     border-radius: 50%;
     background: #fc625d;
@@ -52,7 +72,7 @@ padding: 25px;
     height: 12px;
     top: 0;
     left: 20px;
-    margin-top: 13px;
+    margin-top: 10px;
     -webkit-box-shadow: 20px 0px #fdbc40, 40px 0px #35cd4b;
     box-shadow: 20px 0px #fdbc40, 40px 0px #35cd4b;
     z-index: 3;
