--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -7,6 +7,12 @@
   {{- next_js('config.js') }}
   {{- next_inject('head') }}
   {{ partial('_third-party/analytics/index.njk', {}, {cache: theme.cache.enable}) }}
+  
+  <!--鼠标移动特效-->
+  <canvas class="love" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;" ></canvas> 
+  <script type="text/javascript" src="//cdn.bootcss.com/animejs/2.2.0/anime.min.js"></script> 
+  <script type="text/javascript" src="/js/cursor/love.min.js"></script>
+  
   <noscript>
     <link rel="stylesheet" href="{{ url_for(theme.css) }}/noscript.css">
   </noscript>
@@ -51,8 +57,26 @@
 
   {{- next_inject('bodyEnd') }}
   {% if theme.canvas_nest %}
-<script type="text/javascript"
-color="0,0,255" opacity='0.7' zIndex="-2" count="99" src="//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js"></script>
+   <script type="text/javascript"
+   color="0,0,255" opacity='0.7' zIndex="-2" count="99" src="//cdn.bootcss.com/canvas-nest.js/1.0.0/canvas-nest.min.js"></script>
+  {% endif %}
+  <!-- 樱花特效 -->
+  {% if theme.sakura.enable %}
+      <script async src="/js/fairyDustCursor.js"></script>
+  {% endif %}
+
+{% if theme.cursor_effect %}
+  {% if theme.cursor_effect.type == "fireworks" %}
+    <script src="/js/cursor/fireworks.js"></script>
+  {% elseif theme.cursor_effect.type == "explosion" %}
+    <canvas class="fireworks" style="position: fixed;left: 0;top: 0;z-index: 1; pointer-events: none;" ></canvas>
+    <script src="//cdn.bootcss.com/animejs/2.2.0/anime.min.js"></script>
+    <script src="/js/cursor/explosion.min.js"></script>
+  {% elseif theme.cursor_effect.type == "love" %}
+    <script src="/js/cursor/love.min.js"></script>
+  {% elseif theme.cursor_effect.type == "text" %}
+    <script src="/js/cursor/text.js"></script>
+  {% endif %}
 {% endif %}
 </body>
 </html>
